[gd_scene load_steps=13 format=2]

[ext_resource path="res://Misc/Overlap/HurtBox.tscn" type="PackedScene" id=1]
[ext_resource path="res://Levels/Level1/Sprites/FurnitureCollision.gd" type="Script" id=2]
[ext_resource path="res://Levels/Level1/Sprites/Rubbles/wood/Break2.mp3" type="AudioStream" id=3]
[ext_resource path="res://Levels/Level1/Sprites/Rubbles/wood/Break3.mp3" type="AudioStream" id=4]
[ext_resource path="res://Levels/Level1/Sprites/Rubbles/wood/Break.mp3" type="AudioStream" id=5]
[ext_resource path="res://Levels/Level1/Sprites/BookshelfSmall.png" type="Texture" id=6]
[ext_resource path="res://Misc/Coins/GoldDrop.tscn" type="PackedScene" id=7]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 35.3662, 2.47415 )

[sub_resource type="Animation" id=8]
resource_name = "broke"
tracks/0/type = "value"
tracks/0/path = NodePath("CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("RayCast2D:enabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:collision_layer")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:collision_mask")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("HurtBox/CollisionShape2D2:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("LightOccluder2D:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=9]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/path = NodePath("CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("RayCast2D:enabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:collision_layer")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 40 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:collision_mask")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 7 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("HurtBox/CollisionShape2D2:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("LightOccluder2D:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 102.831, 53.6397 )

[sub_resource type="OccluderPolygon2D" id=10]
closed = false
polygon = PoolVector2Array( -21.7504, -13.7499, 18.5562, -13.808, 18.5562, 7.59774, -21.5796, 7.59774 )

[node name="BookshelfSmall" type="StaticBody2D"]
collision_layer = 40
collision_mask = 7
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.6, 0.6, 0.6, 1 )
position = Vector2( -0.405418, 0.0163956 )
scale = Vector2( 0.06, 0.06 )
texture = ExtResource( 6 )
hframes = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1.61012, -12.9728 )
scale = Vector2( 0.595711, 0.595711 )
shape = SubResource( 5 )
one_way_collision = true
one_way_collision_margin = 0.8

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/broke = SubResource( 8 )
anims/idle = SubResource( 9 )

[node name="RayCast2D" type="RayCast2D" parent="."]
visible = false
position = Vector2( 43.6377, -2.42997 )
rotation = 1.62057
scale = Vector2( 6.79775, 1 )
enabled = true
cast_to = Vector2( 0.740209, 87.3678 )
collision_mask = 7

[node name="HurtBox" parent="." instance=ExtResource( 1 )]
collision_layer = 0
collision_mask = 320

[node name="CollisionShape2D2" type="CollisionShape2D" parent="HurtBox"]
visible = false
position = Vector2( -1.87315, -3.65113 )
scale = Vector2( 0.2, 0.2 )
shape = SubResource( 6 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.01
one_shot = true

[node name="Break1" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 0.122879, 0.140663 )
stream = ExtResource( 5 )
bus = "SFX"

[node name="Break2" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 0.122879, 0.140663 )
stream = ExtResource( 3 )
bus = "SFX"

[node name="Break3" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 0.122879, 0.140663 )
stream = ExtResource( 4 )
bus = "SFX"

[node name="GoldDrop" parent="." instance=ExtResource( 7 )]

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
show_behind_parent = true
occluder = SubResource( 10 )

[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
